[package]
name = "n_gram"
version = "0.1.4"
edition = "2021"
authors = ["Georgiy Ozhegov <georgiyozhegov.rs@gmail.com>"]
description = "Simple library for training n-gram language models."
readme = "README.md"
repository = "https://github.com/georgiyozhegov/n_gram.git"
license = "MIT"
keywords = ["lm", "n-gram", "ngram", "simple"]

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
